[package]
name = "bench-rs"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
ring-channel = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ring_buffer"
harness = false
